examples/test/testpolicy7004.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7004
  namespace: namespace311
spec:
  podSelector:
    matchLabels:
      key7: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value4
          key26: value3
          key37: value3
      podSelector:
        matchLabels:
          key17: value2
          key35: value26
